--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "4.13.0",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.37",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^4.15.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "^18.16.18",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.6",
     "ms": "^2.1.3",
-    "next": "13.3.2",
-    "postcss": "8.4.22",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
+    "next": "^13.4.6",
+    "postcss": "^8.4.24",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
+    "typescript": "^5.1.3",
+    "daisyui": "^3.1.1",
     "@types/ms": "^0.7.31",
-    "prisma": "^4.13.0",
-    "turbo": "^1.9.3"
+    "prisma": "^4.15.0",
+    "turbo": "^1.10.3"
   }
 }
