--- a/package.json
+++ b/package.json
@@ -17,23 +17,24 @@
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.15.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/ms": "^0.7.31",
     "@types/node": "^18.16.18",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.1",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.6",
     "ms": "^2.1.3",
     "next": "^13.4.6",
     "postcss": "^8.4.24",
+    "prisma": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use": "^17.4.0",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "daisyui": "^3.1.1",
-    "@types/ms": "^0.7.31",
-    "prisma": "^4.15.0",
-    "turbo": "^1.10.3"
+    "turbo": "^1.10.3",
+    "typescript": "^5.1.3"
   }
 }
