--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "turbo": "^1.10.3",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "zod": "^3.21.4"
   }
 }
