--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^18.16.18",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
+    "@vercel/kv": "^0.2.1",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.1.1",
     "eslint": "^8.43.0",
@@ -30,6 +31,7 @@
     "postcss": "^8.4.24",
     "prisma": "^4.15.0",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
     "tailwindcss": "^3.3.2",
