--- a/package.json
+++ b/package.json
@@ -16,28 +16,32 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.15.0",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/ms": "^0.7.31",
-    "@types/node": "^18.16.18",
-    "@types/react": "^18.2.13",
-    "@types/react-dom": "^18.2.6",
     "@vercel/kv": "^0.2.1",
-    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "daisyui": "^3.1.1",
-    "eslint": "^8.43.0",
-    "eslint-config-next": "^13.4.6",
-    "ms": "^2.1.3",
     "next": "^13.4.6",
-    "postcss": "^8.4.24",
-    "prisma": "^4.15.0",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
+    "urlcat": "^3.1.0",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
     "tailwindcss": "^3.3.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "prisma": "^4.15.0",
+    "@types/ms": "^0.7.31",
+    "@types/node": "^18.16.18",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.6",
     "ts-node": "^10.9.1",
     "turbo": "^1.10.3",
     "typescript": "^5.1.3",
-    "zod": "^3.21.4"
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1"
   }
 }
