--- a/package.json
+++ b/package.json
@@ -28,20 +28,21 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "prisma": "^4.15.0",
     "@types/ms": "^0.7.31",
     "@types/node": "^18.16.18",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.6",
+    "eslint-plugin-import": "^2.27.5",
+    "postcss": "^8.4.24",
+    "prisma": "^4.15.0",
+    "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "turbo": "^1.10.3",
-    "typescript": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1"
+    "typescript": "^5.1.3"
   }
 }
