--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.4.0",
     "daisyui": "^3.1.1",
     "next": "^13.4.6",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.2.0",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
