--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "scripts": {
     "dev": "prisma generate && next dev",
-    "build": "prisma generate && prisma db push && prisma db seed && next build",
+    "build": "prisma generate && prisma db push && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -40,6 +40,8 @@
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.6",
     "eslint-plugin-import": "^2.27.5",
+    "glob": "^10.3.1",
+    "mustache": "^4.2.0",
     "postcss": "^8.4.24",
     "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2",
